# mu-app-cpm-test

./: CMakeLists.txt  README.md  main.cpp
scripts/: setenv.sh  unsetenv.sh
